[package]
name = "writing"
version = "0.2.1"
authors = [ "Phodal Huang <h@inherd.org>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/inherd/writing"
documentation = "https://github.com/inherd/writing"
homepage = "https://github.com/inherd/writing"
description = """
Writing, is a simple tool for code-document sync.
"""
categories = ["text-processing", "command-line-interface", "development-tools"]
exclude = [
    ".coco/*",
    "benchmark/*",
    "fixtures/*",
    "targets/*",
    ".github/*",
    ".gitattributes",
    ".adr.json",
]


[dependencies]
pulldown-cmark = { version = "0.8", default-features = false }

pest = "2.1.3"
pest_derive = "2.1.0"

thiserror = "1.0"

clap = "3.0.0-beta.5"

tree-sitter-javascript = "=0.19.0"
tree-sitter = "=0.19.3"

guarding_core = "0.2.6"
guarding_ident = "0.2.6"

[[bin]]
name = "writing"
path = "src/bin/writing.rs"
